--- a/collegediary/src/appContextDB.properties
+++ b/collegediary/src/appContextDB.properties
@@ -3,7 +3,7 @@ clgDiry.db.dialect=org.hibernate.dialect.MySQLDialect
 #clgDiry.db.dialect=org.hibernate.dialect.SQLServerDialect
 
 clgDiry.db.showsql=true
-clgDiry.db.update=update  
+clgDiry.db.update=create  
 
 clgDiry.db.useSecondLevelCache=true
 clgDiry.db.dataSource.jndiName=java:comp/env/jdbc/clgdiryDB
